--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.11",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.3.3"
+    "eslint-plugin-prettier": "^5.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
